--- a/.github/workflows/gitartwork.yml
+++ b/.github/workflows/gitartwork.yml
@@ -14,5 +14,5 @@
             # Use this username's contribution graph  
             user_name: zeeshanali90233
             # Text on contribution graph 
-            text: JASINERI
+            text: Zeeshan Ali
        - uses: jasineri/simple-push-action@v1
